Indent for summary and discrete, intros

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -1,7 +1,8 @@
 [DEFAULT]
 font_type=Avenir Next
-font_size=11
 font_measure=pt
+font_size=11
+list_font_size=10
 table_font_size=10
 logo_image=./pavilio_logo.png
 organization_name=Pavilion Data Systems, Inc.
@@ -9,6 +10,21 @@ copyright_notice=Copyright 2022, Pavilion Data Systems. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
 
 [THEME_FORMAT]
+indent=15
 tag_font_color=
 tag_font_size=9
+key_theme_intro=These are the themes for every sub-study that you elected to include in the report.
+    The format for each theme section covering summary and detailed/discrete themes includes the
+    theme identifier and description/definition, a fun theme fortune, the themes tags, and a listing
+    of quotes.  Note these data are pulled from the system, and if you'd like to modify them you
+    would need to modify them in the system prior to generating this report.  Additionally, if you
+    make changes to this report they aren't reflected in the system.
+summary_theme_intro=This is the summary theme for the entire sub-study.  Using natural language processing
+    mediumroast.io has detected the associated tags and quotes matched to the tags.  It is a generalization
+    of the sub-study and accompanies the discrete themes.
+discrete_theme_intro=Here are the discrete themes for the sub-study.  Since we need enough unique tags to
+    check the individual interactions in the sub-study for relevant text snippets and quotes you may find
+    discrete themes without quotes.  We do not strike them from the report because we believe it is 
+    important to see what the mediumroast.io detected for transparency purposes.
+
 
