--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -11,8 +11,8 @@ confidential_notice=Company Confidential, Shared under mutual NDA only.
 
 [THEME_FORMAT]
 indent=15
-tag_font_color=
-tag_font_size=9
+tag_font_color=blue
+font_size=9
 key_theme_intro=These are the themes for every sub-study that you elected to include in the report.
     The format for each theme section covering summary and detailed/discrete themes includes the
     theme identifier and description/definition, a fun theme fortune, the themes tags, and a listing
