Move discrete themes to new format

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -20,7 +20,7 @@ key_theme_intro=These are the themes for every sub-study that you elected to inc
     make changes to this report they aren't reflected in the system.
 summary_theme_intro=This is the summary theme for the entire sub-study.  Using natural language processing
     mediumroast.io has detected the associated tags and quotes matched to the tags.  It is a generalization
-    of the sub-study and accompanies the discrete themes.
+    of the sub-study and accompanies the discrete detailed themes.
 discrete_theme_intro=Here are the discrete themes for the sub-study.  Since we need enough unique tags to
     check the individual interactions in the sub-study for relevant text snippets and quotes you may find
     discrete themes without quotes.  We do not strike them from the report because we believe it is 
