--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -21,9 +21,13 @@ key_theme_intro=These are the themes for every sub-study that you elected to inc
 summary_theme_intro=This is the summary theme for the entire sub-study.  Using natural language processing
     mediumroast.io has detected the associated tags and quotes matched to the tags.  It is a generalization
     of the sub-study and accompanies the discrete detailed themes.
-discrete_theme_intro=Here are the discrete themes for the sub-study.  Since we need enough unique tags to
+discrete_themes_intro=Here are the discrete themes for the sub-study.  Since we need enough unique tags to
     check the individual interactions in the sub-study for relevant text snippets and quotes you may find
     discrete themes without quotes.  We do not strike them from the report because we believe it is 
     important to see what the mediumroast.io detected for transparency purposes.
+discrete_theme_intro=Each theme, if quotes/snippets are detected, has appropriate data pulled from interactions
+    listed below. Additionally, the frequency of each theme is reported to provide the user with a sense of how
+    strong the theme is relative to the other themes in the sub-study.
+
 
 
