Fixed substudy_excludes and config file for mr

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -4,6 +4,19 @@ font_measure=pt
 font_size=11
 list_font_size=10
 table_font_size=10
+logo_image=./mr_logo_with_text.png
+organization_name=Mediumroast, Inc.
+copyright_notice=Copyright 2022, Mediumroast. All rights reserved.
+confidential_notice=Company Confidential, Shared under mutual NDA only.
+
+
+
+[PAVILION]
+font_type=Avenir Next
+font_measure=pt
+font_size=11
+list_font_size=10
+table_font_size=10
 logo_image=./pavilio_logo.png
 organization_name=Pavilion Data Systems, Inc.
 copyright_notice=Copyright 2022, Pavilion Data Systems. All rights reserved.
