--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,7 +2,7 @@
   "name": "mediumroast",
   "version": "0.7.5",
   "description": "An API binding and toolset for the mediumroast.io.",
-  "main": "src/index.js",
+  "main": "src/api/highLevel.js",
   "scripts": {
     "test": "node test/spec",
     "build": "rollup -c",
