--- a/javascript/package.json
+++ b/javascript/package.json
@@ -33,7 +33,7 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "axios": "^0.25.0",
     "chalk": "^5.0.0",
-    "rollup": "^2.66.0",
+    "rollup": "^2.66.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0"
@@ -44,6 +44,7 @@
     "cli"
   ],
   "dependencies": {
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "axios": "^0.25.0"
   }
 }
