Added openvault config for reporting

--- a/python/cli/reports.ini
+++ b/python/cli/reports.ini
@@ -22,6 +22,17 @@ organization_name=Pavilion Data Systems, Inc.
 copyright_notice=Copyright 2022, Pavilion Data Systems. All rights reserved.
 confidential_notice=Company Confidential, Shared under mutual NDA only.
 
+[OPENVAULT]
+font_type=Avenir Next
+font_measure=pt
+font_size=11
+list_font_size=10
+table_font_size=10
+logo_image=./openvault.png
+organization_name=OpenVault, LLC
+copyright_notice=Copyright 2022, OpenVault, LLC. All rights reserved.
+confidential_notice=Company Confidential, Shared under mutual NDA only.
+
 [THEME_FORMAT]
 indent=15
 font_size=9
