--- a/javascript/package.json
+++ b/javascript/package.json
@@ -13,7 +13,8 @@
     "list_studies": "cli/list_studies.js",
     "list_companies": "cli/list_companies.js",
     "list_interactions": "cli/list_interactions.js",
-    "list_users": "cli/list_users.js"
+    "list_users": "cli/list_users.js",
+    "doc_company": "cli/doc_company.js"
   },
   "type": "module",
   "keywords": [
